# urlshortener

./: .gitignore  IDEA.md  LICENSE  README.md  ROADMAP.md  dev_server.py  manage.py  pyproject.toml
src/urlshortener/: __init__.py  app.py  auth.py  config.py  db.py
src/urlshortener/templates/: admin.html
